--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "@types/jest": "^24.0.23",
     "jest": "^24.9.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "keypress": "^0.2.1"
+  }
 }
