--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "chalk": "^3.0.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
