--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "keypress": "^0.2.1"
+    "keypress": "^0.2.1",
+    "node-pty": "^0.9.0"
   }
 }
