--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bash-parser": "^0.5.0",
+    "fast-glob": "^3.1.1",
     "keypress": "^0.2.1",
     "node-pty": "^0.9.0"
   }
