--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bash-parser": "^0.5.0",
     "fast-glob": "^3.1.1",
     "keypress": "^0.2.1",
-    "node-pty": "^0.9.0"
+    "node-pty": "^0.9.0",
+    "node-terminal-menu": "^1.3.0"
   }
 }
