--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "nash",
   "version": "1.0.0",
-  "description": "Node Shell",
+  "description": "A command-line editor for bash or compatible shells, aiming to provide great UX and productivity",
   "main": "nash.js",
   "scripts": {
     "test": "jest --watch",
     "start": "node src/nash.js"
   },
-  "keywords": [],
+  "keywords": ["node", "shell", "bash", "oh-my-zsh", "productivity"],
   "author": "Luis Crespo",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.23",
-    "chalk": "^3.0.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
     "bash-parser": "^0.5.0",
+    "chalk": "^3.0.0",
     "fast-glob": "^3.1.1",
     "keypress": "^0.2.1",
     "node-pty": "^0.9.0",
