--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "jest --watch",
     "start": "node src/nash.js"
   },
-  "keywords": ["node", "shell", "bash", "oh-my-zsh", "productivity"],
+  "keywords": [
+    "node",
+    "shell",
+    "bash",
+    "oh-my-zsh",
+    "productivity"
+  ],
   "author": "Luis Crespo",
   "license": "ISC",
   "devDependencies": {
@@ -20,6 +26,6 @@
     "fast-glob": "^3.1.1",
     "keypress": "^0.2.1",
     "node-pty": "^0.9.0",
-    "node-terminal-menu": "^1.3.0"
+    "node-terminal-menu": "^1.4.0"
   }
 }
