--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "bash-parser": "^0.5.0",
     "chalk": "^3.0.0",
-    "fast-glob": "^3.1.1",
+    "glob": "^7.1.6",
     "keypress": "^0.2.1",
     "node-pty": "^0.9.0",
     "node-terminal-menu": "^3.2.0"
