--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "node-terminal-menu": "^3.2.0"
   },
   "pkg": {
-    "scripts": "src/plugins/*.js"
+    "scripts": "src/plugins/**/*.js"
   }
 }
