--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": "src/nash.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "node src/nash.js $(which bash)"
+    "start": "node src/nash.js $(which bash)",
+    "dist": "build/pkg.sh $npm_package_version"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.9.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "pkg": "^4.4.3"
   },
   "dependencies": {
     "bash-parser": "^0.5.0",
